--- a/package.json
+++ b/package.json
@@ -9,23 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/three": "^0.173.0",
-    "next": "15.1.7",
+    "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.173.0"
+    "three": "^0.174.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/estree": "^1.0.6",
-    "@types/json-schema": "^7.0.15",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4"
   }
 }
