Adding Scene and Camera movement

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,13 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", 
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+      "three": ["./node_modules/three"],
+      "three/examples/jsm/*": ["./node_modules/three/examples/jsm/*"]
+    },
+    "target": "es6",
+    "module": "commonjs",
+    "strict": true
   }
 }
