--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stats-js": "^1.0.1",
     "three": "^0.174.0"
   },
   "devDependencies": {
