--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "drizzle-orm": "^0.40.0",
+    "maath": "^0.10.8",
     "mysql2": "^3.13.0",
     "next": "15.2.1",
     "react": "^19.0.0",
