--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "drizzle-orm": "^0.40.0",
+    "gsap": "^3.12.7",
     "maath": "^0.10.8",
     "mysql2": "^3.13.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "troika-three-text": "^0.52.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
