--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@types/three": "^0.174.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "drizzle-orm": "^0.40.0",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.488.0",
     "maath": "^0.10.8",
     "mysql2": "^3.13.0",
     "next": "15.2.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
     "three": "^0.174.0",
-    "troika-three-text": "^0.52.3"
+    "troika-three-text": "^0.52.3",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
