--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.0",
     "@types/three": "^0.174.0",
     "class-variance-authority": "^0.7.1",
