--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-progress": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.0",
     "@types/three": "^0.174.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -28,11 +29,13 @@
     "postprocessing": "^6.37.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "three": "^0.174.0",
     "troika-three-text": "^0.52.3",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "typography": "^0.16.24"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
